--- a/src/index.css
+++ b/src/index.css
@@ -100,10 +100,11 @@ input[type=image] {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 400px;
+  width: 350px;
 }
 
-#subheader-decades > li {
+
+#subheader-decades > a {
   font-family: 'Bitter', serif;
   font-weight: 700;
   color: rgb(138, 138, 138);
@@ -111,7 +112,7 @@ input[type=image] {
   cursor: pointer;
 }
 
-#subheader-decades > li:hover {
+#subheader-decades > a:hover {
   color: black;
 }
 
