--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,11 @@ body {
   min-height: 100vh;
 }
 
+.App{
+  min-height:100%;
+  position:relative;
+}
+
 header {
   display: flex;
   flex-direction: row;
@@ -60,6 +65,7 @@ input[type=text] {
   border: 2px solid #dedede;
   border-radius: 10px;
   box-sizing: border-box;
+  width: 250px;
 }
 
 input[type=image] {
@@ -93,6 +99,7 @@ input[type=image] {
 
 #subheader-tab > li:hover {
   color: black;
+  transform: scale(1.05);
 }
 
 #subheader-decades {
@@ -114,39 +121,53 @@ input[type=image] {
 
 #subheader-decades > a:hover {
   color: black;
+  transform: scale(1.05);
 }
 
-#search-title {
+.title {
   font-family: 'Bitter', serif;
   text-align: center;
 }
 
-#search-title > h1 {
+.title > h1 {
   font-weight: 700;
   margin-top: -10px;
+  margin-bottom: 10px;
   font-size: 2.5em;
 }
 
-#search-title > p {
+.title > p {
   margin-top: 50px;
+}
+
+#film-quote{
+  color: #242424;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 1.1rem;
+  font-style: italic;
+  margin: 10px;
 }
 
 #container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-around;
   align-content: stretch;
   align-items: center;
   margin: auto;
+  padding:10px;
+  padding-bottom:60px;
+  min-height: 50vh;
 }
 
 .card{
   background: white;
   border: 2px solid rgb(236, 236, 236);
   border-radius: 10px;
-  width: 25vw;
+  width: 40vw;
   height: fit-content;
-  margin: 20px;
+  margin: 10px;
   padding: 20px;
 }
 
@@ -168,7 +189,7 @@ p {
   line-height: 1.1;
 }
 
-button {
+.button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -179,22 +200,22 @@ button {
   transition: border-color 0.25s;
 }
 
-button:hover {
+.button:hover {
   border-color: #393fa0;
   color: #393fa0;
   background-color: #e2e2e2;
 }
-button:focus,
-button:focus-visible {
+.button:focus,
+.button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
 footer {
   background-color:#242424;
   color: white;
-  height: 50vh;
-  margin-top: 10vh;
-  margin-bottom: 0;
+  bottom: 0;
+  width: 100%;
+  height: 20vh;   /* Height of the footer */
 }
 
 @media (prefers-color-scheme: light) {
@@ -205,7 +226,7 @@ footer {
   a:hover {
     color: #000000;
   }
-  button {
+  .button {
     background-color: #efefef;
   }
 }
