--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,7 @@ input[type=image] {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding-top: 0px;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -109,7 +110,6 @@ input[type=image] {
   justify-content: center;
   width: 350px;
 }
-
 
 #subheader-decades > a {
   font-family: 'Bitter', serif;
@@ -148,6 +148,39 @@ input[type=image] {
   margin: 10px;
 }
 
+.page-list {
+  list-style-type: none;
+  overflow-x: visible;
+  overflow-y: hidden;
+  white-space: nowrap;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-content: center;
+  margin: 20px;
+  margin-left: 50px;
+  margin-right: 50px;
+  transform: scale(0.95);
+}
+
+.page-list > li {
+  padding: 10px;
+  cursor: pointer;
+  font-weight: 700;
+  color: rgb(138, 138, 138);
+  
+}
+
+.page-list > li:hover {
+  color: black;
+  transform: scale(1.05);
+}
+
+.page-list > .current-page {
+  color: black;
+  transform: scale(1.05);
+}
+
 #container {
   display: flex;
   flex-direction: row;
@@ -176,6 +209,11 @@ input[type=image] {
 }
 
 .card > h2 {
+  color: rgb(75, 75, 75);
+}
+
+.card > .byline {
+  font-style: italic;
   color: rgb(75, 75, 75);
 }
 
@@ -216,6 +254,43 @@ footer {
   bottom: 0;
   width: 100%;
   height: 20vh;   /* Height of the footer */
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Bitter', serif;
+}
+
+footer > p {
+  margin-top: 0;
+}
+
+footer > a {
+  color: white;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  opacity: 0;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(138, 138, 138);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(75, 75, 75);
 }
 
 @media (prefers-color-scheme: light) {
@@ -223,8 +298,8 @@ footer {
     color: #000000;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #000000;
+  footer > a:hover {
+    color: #a1a5ff;
   }
   .button {
     background-color: #efefef;
