--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,7 @@ header > h1 {
 
 #navbar-homepage > img {
   margin: 0;
+  opacity: 0.9;
   transform: scale(0.7);
 }
 
@@ -280,6 +281,7 @@ input[type=image] {
   border-radius: 5px;
   padding: 7px;
   box-shadow: 0px 5px 10px 0px rgba(255, 255, 255, 0.5);
+  transform: scale(1.1);
 
   /* Position the tooltip */
   position: absolute;
