updated css responsiveness - changed star height

--- a/src/index.css
+++ b/src/index.css
@@ -660,7 +660,7 @@ footer > a:hover , footer > p > a:hover {
   }
 
   .fav-icon img {
-    height: fit-content;
+    height: 90%;
   }
 
   .circular-progress-bar {
